--- a/codigo_original/SRC/plantillas_base/base_galeria.html
+++ b/codigo_original/SRC/plantillas_base/base_galeria.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-    <div class="row mt-5 ">
+    <div class="row mt-5">
         <div id="principal-FilaContenedor-Body-1" class="col align-items-center d-flex flex-column position-relative">
             <div id="fila-Body-1.botones-Body-1" class="list-group list-group-horizontal p-2"
                 style="height: 30%;top: -48px;position: absolute;">
@@ -23,7 +23,7 @@
                         class="btn dropdown-toggle border border-2 border-dark" type="button"
                         data-bs-toggle="dropdown" aria-expanded="false"
                         style="border-top-left-radius: 20px!important;background-color:white;height:47.92px">+</button>
-                    <ul class="dropdown-menu" style="">
+                    <ul class="dropdown-menu">
                         <li value="1" class="dropdown-item" id="fila-Body-1.botones-Body-1-item-1">1</li>
                         <li value="2" class="dropdown-item" id="fila-Body-1.botones-Body-1-item-2">2</li>
                         <li value="3" class="dropdown-item" id="fila-Body-1.botones-Body-1-item-3">3</li>
@@ -46,7 +46,7 @@
             </div><br>
         </div>
 
-        <div id="principal-FilaContenedor-Body-1" class="col align-items-center d-flex flex-column position-relative">
+        <div id="principal-FilaContenedor-Body-2" class="col align-items-center d-flex flex-column position-relative">
             <div id="fila-Body-1.botones-Body-1" class="list-group list-group-horizontal p-2"
                 style="height: 30%;top: -48px;position: absolute;">
                 <div class="dropdown"><button id="crear-fila-Body-1.botones-Body-1"
@@ -54,7 +54,7 @@
                         class="btn dropdown-toggle border border-2 border-dark" type="button"
                         data-bs-toggle="dropdown" aria-expanded="false"
                         style="border-top-left-radius: 20px!important;background-color:white;height:47.92px">+</button>
-                    <ul class="dropdown-menu" style="">
+                    <ul class="dropdown-menu" >
                         <li value="1" class="dropdown-item" id="fila-Body-1.botones-Body-1-item-1">1</li>
                         <li value="2" class="dropdown-item" id="fila-Body-1.botones-Body-1-item-2">2</li>
                         <li value="3" class="dropdown-item" id="fila-Body-1.botones-Body-1-item-3">3</li>
@@ -79,7 +79,7 @@
     </div>
 
     <div class="row mt-5 ">
-        <div id="principal-FilaContenedor-Body-1" class="col align-items-center d-flex flex-column position-relative">
+        <div id="principal-FilaContenedor-Body-3" class="col align-items-center d-flex flex-column position-relative">
             <div id="fila-Body-1.botones-Body-1" class="list-group list-group-horizontal p-2"
                 style="height: 30%;top: -48px;position: absolute;">
                 <div class="dropdown"><button id="crear-fila-Body-1.botones-Body-1"
@@ -87,7 +87,7 @@
                         class="btn dropdown-toggle border border-2 border-dark" type="button"
                         data-bs-toggle="dropdown" aria-expanded="false"
                         style="border-top-left-radius: 20px!important;background-color:white;height:47.92px">+</button>
-                    <ul class="dropdown-menu" style="">
+                    <ul class="dropdown-menu" >
                         <li value="1" class="dropdown-item" id="fila-Body-1.botones-Body-1-item-1">1</li>
                         <li value="2" class="dropdown-item" id="fila-Body-1.botones-Body-1-item-2">2</li>
                         <li value="3" class="dropdown-item" id="fila-Body-1.botones-Body-1-item-3">3</li>
@@ -110,7 +110,7 @@
             </div><br>
         </div>
 
-        <div id="principal-FilaContenedor-Body-1" class="col align-items-center d-flex flex-column position-relative">
+        <div id="principal-FilaContenedor-Body-4" class="col align-items-center d-flex flex-column position-relative">
             <div id="fila-Body-1.botones-Body-1" class="list-group list-group-horizontal p-2"
                 style="height: 30%;top: -48px;position: absolute;">
                 <div class="dropdown"><button id="crear-fila-Body-1.botones-Body-1"
@@ -118,7 +118,7 @@
                         class="btn dropdown-toggle border border-2 border-dark" type="button"
                         data-bs-toggle="dropdown" aria-expanded="false"
                         style="border-top-left-radius: 20px!important;background-color:white;height:47.92px">+</button>
-                    <ul class="dropdown-menu" style="">
+                    <ul class="dropdown-menu" >
                         <li value="1" class="dropdown-item" id="fila-Body-1.botones-Body-1-item-1">1</li>
                         <li value="2" class="dropdown-item" id="fila-Body-1.botones-Body-1-item-2">2</li>
                         <li value="3" class="dropdown-item" id="fila-Body-1.botones-Body-1-item-3">3</li>
