preparación desplegamiento definitivo

--- a/codigo_original/SRC/clases/Elementos/pruebas_css.html
+++ b/codigo_original/SRC/clases/Elementos/pruebas_css.html
@@ -55,6 +55,30 @@
 <body>
 
     <div>
+        <img src="../../imagenes_usuario/default_image.jpg" alt="" style="width: 25%; border: 0px solid black; border-radius: 0%;">
+
+        <div id="contenidoRecuadroEstilo" style="padding:5px 5px 5px 5px">
+            <label for="inputImagen">Imagen: </label><br>
+            <input type="file" id="inputImagen">
+            <br><br>
+            <label for="tamañoImagen">Tamaño imagen (width): </label>
+            <input type="number" id="tamañoImagen">
+            <br><br>
+            <label for="borderRadius">Border Radius (%): </label>
+            <input type="number" id="borderRadius">
+            <br><br>
+            <label for="anchoBorde">Ancho borde (px):</label>
+            <input type="number" id="anchoBorde">
+            <br><br>
+            <label for="colorBorde">Color borde:</label>
+            <input type="color" id="colorBorde">
+
+        </div>
+    </div>
+    
+    <hr>
+
+    <div>
         <div id="">
             <table>
                 <thead>
